A lot of automated code cleanups